# SP1_Project

./: README.md  dkim_data.json  main.py
data/: dkim_data.json  email.eml  python_verifier.py
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
src/: extract_dkim.py
