[workspace]
[package]
version = "0.1.0"
name = "sp1_project-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.0-testnet" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.0-testnet"  }