[package]
name = "dkim_verifier_script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }
